# Mobile_CDPR

./: .clang-format  .gitignore  Mobile_CDPR.pro  README.md  a1.cpp  cable_archor_button.cpp  chassis_button.cpp  chassis_ctrl.cpp  chassis_ctrl.hpp  common.hpp  controlcan.hpp  filters.cpp  global_traj_ctrl.cpp  global_traj_ctrl.hpp  go.cpp  local_traj_ctrl.cpp  local_traj_ctrl.hpp  motor_driver.cpp  motor_driver.hpp  usbcan.cpp  usbcan.hpp  widget.cpp  widget.hpp  widget.ui
PathPlanningUsingMpc/: CdprCost.m  CdprCostGradientFcn.m  CdprIneqConFcn.m  CdprInitialGuess.m  CdprParkingUsingMultistageNMPC.asv  CdprParkingUsingMultistageNMPC.m  CdprPlot.m  CdprStateFcn.m  CdprStateJacobianFcn.m  analyzeResults.m  no_obs07-17-10-36.fig  no_obs07-17-10-36].fig  parse_rosbag.m
STM32/: STM32.ioc
csv/: updown.csv  updown0.05.csv
data/: archorPos02_28_21_45_15.csv  archorPos02_28_22_02_12.csv  archorPos02_28_22_09_10.csv  archorPos02_29_10_32_06.csv  (+18 more)
src/mobile_platform_gen3_wide_wheel_urdf/: CMakeLists.txt  package.xml
src/mobile_platform_gen3_wide_wheel_urdf/config/: joint_names_mobile_platform_gen3_wide_wheel_urdf.yaml  sim_config.yaml
src/mobile_platform_gen3_wide_wheel_urdf/launch/: display.launch  gazebo.launch
src/mobile_platform_gen3_wide_wheel_urdf/meshes/: LB0_Link.STL  LB1_Link.STL  LB2_Link.STL  LF0_Link.STL  LF1_Link.STL  LF2_Link.STL  RB0_Link.STL  RB1_Link.STL  RB2_Link.STL  RF0_Link.STL  RF1_Link.STL  RF2_Link.STL
src/mobile_platform_gen3_wide_wheel_urdf/urdf/: mobile_platform_gen3_wide_wheel_urdf.csv  mobile_platform_gen3_wide_wheel_urdf.urdf
(+820 files in other folders)
